add_executable(5_1 5_1.c)
add_executable(5_2 5_2.c)
add_executable(5_3 5_3.c)
add_executable(5_4 5_4.c)
add_executable(5_5 5_5.c)
add_executable(5_6 5_6.c)
add_executable(5_7 5_7.c)
add_executable(collatz collatz.c)
add_executable(gongyueshu_1 gongyueshu_1.c)
add_executable(gongyueshu_2 gongyueshu_2.c)
add_executable(inverse_2 inverse_2.c)
add_executable(jiecheng jiecheng.c)
add_executable(jishu jishu.c)
add_executable(leap_year_if_else leap_year_if_else.c)
add_executable(obstacle obstacle.c)
add_executable(prime_number prime_number.c)
add_executable(shuzu shuzu.c)
add_executable(single_integer single_integer.c)