add_executable(decimal decimal.c)
add_executable(erfen erfen.c)
add_executable(flip flip.c)
add_executable(jiji jiji.c)
add_executable(jiji2 jiji2.c)
add_executable(jiji3 jiji3.c)
add_executable(jiji4 jiji4.c)
add_executable(josephus josephus.c)
add_executable(palindrome palindrome.c)
add_executable(prime_number_2 prime_number_2.c)
add_executable(Quick-sort Quick-sort.c)
add_executable(shuixianhua shuixianhua.c)
add_executable(shuzupaixu shuzupaixu.c)
add_executable(shuzupaixu_2 shuzupaixu_2.c)
add_executable(star star.c)
add_executable(statistics statistics.c)
add_executable(weishu weishu.c)