add_executable(6_1 6_1.c)
add_executable(6_2 6_2.c)
add_executable(6_3 6_3.c)
add_executable(6_4 6_4.c)
add_executable(6_5 6_5.c)
add_executable(6_6 6_6.c)
add_executable(life life.c)
add_executable( matrix-mult matrix-mult.c)
add_executable(mines mines.c)
add_executable(shangke shangke.c)
add_executable(shangke2 shangke2.c)
add_executable(sudoku sudoku.c)
add_executable(trace trace.c)