add_executable(absolute-prime absolute-prime.c)
add_executable(behaviors behaviors.c)
add_executable(Cantor Cantor.c)
add_executable(chujiu chujiu.c)
add_executable(magic-square magic-square.c)
add_executable(MEDIUM MEDIUM.c)
add_executable(next-permutation next-permutation.c)
add_executable(radix radix.c)
add_executable(sum sum.c)
add_executable(swap swap.c)
add_executable(zklsb zklsb.c)