add_executable(7_1 7_1.c)
add_executable(7_2 7_2.c)
add_executable(7_3 7_3.c)
add_executable(7_4 7_4.c)
add_executable(8_1 8_1.c)
add_executable(8_2 8_2.c)
add_executable(8_3 8_3.c)
add_executable(buhui buhui.c)
add_executable(integration integration.c)
add_executable(jijiji jijiji.c)
add_executable(magic magic.c)
add_executable(max max.c)
add_executable(pascal pascal.c)
add_executable(poi poi.c)
add_executable(tiles tiles.c)
add_executable(tiles2 tiles2.c)
add_executable(triangle triangle.c)