add_executable(10_1 10_1.c)
add_executable(10_2 10_2.c)
add_executable(10_3 10_3.c)
add_executable(10_4 10_4.c)
add_executable(10_5 10_5.c)
add_executable(10_6 10_6.c)
add_executable(10_7 10_7.c)
add_executable(brackets brackets.c)
add_executable(buddy buddy.c)
add_executable(cuboid cuboid.c)
add_executable(plus plus.c)
add_executable(pour pour.c)
add_executable(rotate rotate.c)
add_executable(wine wine.c)