add_executable(11A_1 11A_1.c)
add_executable(11A_2 11A_2.c)
add_executable(11A_3 11A_3.c)
add_executable(11A_4 11A_4.c)
add_executable(11B_1 11B_1.c)
add_executable(11B_2 11B_2.c)
add_executable(11B_3 11B_3.c)
add_executable(11B_4 11B_4.c)
add_executable(interpreter interpreter.c)
add_executable(substr substr.c)
add_executable(swap swap.c)
add_executable(title title.c)
add_executable(try try.c)