add_executable(12_1 12_1.c)
add_executable(12_2 12_2.c)
add_executable(12_3 12_3.c)
add_executable(12_4 12_4.c)
add_executable(12_5 12_5.c)
add_executable(13_1 13_1.c)
add_executable(prase prase.c)
add_executable(stringcat stringcat.c)
add_executable(tokenizer tokenizer.c)
add_executable(try1 try1.c)
add_executable(try2 try2.c)