add_executable(SDL SDL.c)
target_link_libraries(SDL mingw32)
target_link_libraries(SDL SDL2main)
target_link_libraries(SDL SDL2_mixer)
target_link_libraries(SDL SDL2)
target_link_libraries(SDL SDL2_image)
target_link_libraries(SDL SDL2_ttf)
add_executable(calculator calculator.c)
add_executable(mycalculator mycalculator.c)
