add_executable(SDL SDL.c)
target_link_libraries(SDL mingw32)
target_link_libraries(SDL SDL2main)
target_link_libraries(SDL SDL2_mixer)
target_link_libraries(SDL SDL2)
target_link_libraries(SDL SDL2_image)
target_link_libraries(SDL SDL2_ttf)
add_executable(calculator calculator.c )
add_executable(mycalculator mycalculator.c)
add_executable(xiaokonglong xiaokonglong.c)
add_executable(Bzhan Bzhan.c)
add_executable(ylgy 2/main.c 2/ylgy.h)
target_link_libraries(xiaokonglong mingw32)
target_link_libraries(xiaokonglong SDL2main)
target_link_libraries(xiaokonglong SDL2_mixer)
target_link_libraries(xiaokonglong SDL2)
target_link_libraries(xiaokonglong SDL2_image)
target_link_libraries(xiaokonglong SDL2_ttf)
target_link_libraries(Bzhan mingw32)
target_link_libraries(Bzhan SDL2main)
target_link_libraries(Bzhan SDL2_mixer)
target_link_libraries(Bzhan SDL2)
target_link_libraries(Bzhan SDL2_image)
target_link_libraries(Bzhan SDL2_ttf)
add_executable(game SDLTutorial-For-Bilibili-main/game.c)
add_executable(mainn SDLTutorial-For-Bilibili-main/mainn.c)

target_link_libraries(game mingw32)
target_link_libraries(game SDL2main)
target_link_libraries(game SDL2_mixer)
target_link_libraries(game SDL2)
target_link_libraries(game SDL2_image)
target_link_libraries(game SDL2_ttf)

target_link_libraries(mainn mingw32)
target_link_libraries(mainn SDL2main)
target_link_libraries(mainn SDL2_mixer)
target_link_libraries(mainn SDL2)
target_link_libraries(mainn SDL2_image)
target_link_libraries(mainn SDL2_ttf)